# Sem8

./: main.py  pyproject.toml  vis.py
DM/: all.py  hash.py  preprocessing.py
IR/: all.py  code.py  practice.py  practice2.py
IR/corpus/: doc1.txt  doc2.txt  doc3.txt
bm_preprocessing/: .gitignore  README.md  USAGE.md  pyproject.toml
bm_preprocessing/src/bm_preprocessing/: __init__.py
bm_preprocessing/src/bm_preprocessing/DM/: __init__.py  adaboost.py  all.py  all_vis.py  apriori.py  bagging.py  hash.py  hunts.py  hunts_test.py  id3.py  id3_test.py  lib_doc.py  metrics.py  preprocessing.py  python_doc.py
bm_preprocessing/src/bm_preprocessing/DM/sources/: adaboost.py  all_hunts_tree  all_vis.py  apriori.py  bagging.py  data.csv  hunts.py  hunts_test.py  id3.py  id3_test.py  lib_doc.py  metrics.py  preprocessing.py  python_doc.py
bm_preprocessing/src/bm_preprocessing/IR/: __init__.py  all.py  all_vis.py  eval_metrics.py  ndd.py  rel.py
bm_preprocessing/src/bm_preprocessing/IR/sources/: all.py  all_vis.py  eval_metrics.py  ndd.py  rel.py
