[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bm-preprocessing"
version = "0.2.1"
description = "A package to preprocess text data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bm_preprocessing"]
