[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bm-preprocessing"
version = "1.2.0"
description = "A package to preprocess text data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "build>=1.2.2.post1",
    "graphviz>=0.20.3",
    "matplotlib>=3.7.5",
    "nltk>=3.9.1",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bm_preprocessing"]
